--- a/project/Dreamworld.css
+++ b/project/Dreamworld.css
@@ -260,3 +260,8 @@ footer a img {
 footer a img:hover {
     transform: translateY(-5px) scale(1.1);
 }
+
+footer h3{
+    color: rgb(255, 185, 6);
+
+}
